sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:10: error: not found: value h
       while(j >= h && getValue(j - gap) > v){
                  ^