sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var gap:Int = getValueCount() / 2
  var position:Int = 0
  var v:Int = 0
  for(k <- 0 to 16){
    for(i <- gap to getValueCount() - 1){
       v = getValue(i)
       var j:Int = i
       while(j >= h && getValue(j - gap) > v){
         copy(j - gap, j)
         j = j - gap
       }
       setValue(j, v)
    }
    gap /= 2
  }
}